# synth-haskell

./: .gitignore  Instruments.hs  Midi.hs  MidiTest.hs  Play.hs  README.md  Rendering.hs  RenderingFuncs.hs  Synth.hs  Tests.hs  Types.hs  Wave.hs  WaveTest.hs  index.html  params.json  synth.cabal  wave.hs
