name: synth
version: 0.1.0.0
synopsis: A MIDI to WAVE synthesizer 
author: Ondřej Garncarz
maintainer: gar.o@post.cz
category: Sound
build-type: Simple
cabal-version: >= 1.8

executable synth
  main-is: Synth.hs
  ghc-options: -main-is Synth -O3

  other-modules:
    Instruments
    Midi
    Play
    Rendering
    RenderingFuncs
    Types
    Wave
  
  build-depends:       
    base,
    array,
    cmdargs,
    HCodecs >= 0.3,
    filepath,
    IntervalMap,
    MissingH,
    sox,
    vector

test-suite synth-test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  build-depends:       
    base,
    array,
    cmdargs,
    HCodecs >= 0.3,
    IntervalMap,
    MissingH,
    vector,
   
    HUnit,
    QuickCheck >= 2,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2 >= 0.3.0.1

